--- a/src/app/account/auth/login/login.component.html
+++ b/src/app/account/auth/login/login.component.html
@@ -18,9 +18,8 @@
                   </a>
                 </div>
 
-                <h6 class="h5 mb-0 mt-4">Welcome back!</h6>
-                <p class="text-muted mt-1 mb-4">Enter your email address and password to
-                  access admin panel.</p>
+                <h6 class="h5 mb-0 mt-4">Bienvenido!</h6>
+                <p class="text-muted mt-1 mb-4">Indique su email y contraseña para ingresal al panel de control.</p>
 
                 <form class="authentication-form" name="loginForm" [formGroup]="loginForm" (ngSubmit)="onSubmit()"
                   novalidate>
@@ -28,7 +27,7 @@
                   <ngb-alert type="danger" *ngIf="error" [dismissible]="false">{{ error }}</ngb-alert>
 
                   <div class="form-group">
-                    <label class="form-control-label">Email Address</label>
+                    <label class="form-control-label">Email</label>
                     <div class="input-group input-group-merge">
                       <div class="input-group-prepend">
                         <span class="input-group-text">
@@ -38,14 +37,14 @@
                       <input type="email" class="form-control" formControlName="email" id="email"
                         placeholder="Your email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" required />
                       <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-                        <div *ngIf="f.email.errors.required">Email is required</div>
-                        <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
+                        <div *ngIf="f.email.errors.required">El email es requerido</div>
+                        <div *ngIf="f.email.errors.email">Por favor proporcione un email valido</div>
                       </div>
                     </div>
                   </div>
 
                   <div class="form-group mt-4">
-                    <label class="form-control-label">Password</label>
+                    <label class="form-control-label">Contraseña</label>
                  <!--    <a routerLink="/account/reset-password"
                       class="float-right text-muted text-unline-dashed ml-1">Forgot your
                       password?</a> -->
@@ -55,11 +54,11 @@
                           <i data-feather="lock" class="icon-dual" appFeatherIcon></i>
                         </span>
                       </div>
-                      <input type="password" class="form-control" formControlName="password"
+                      <input type="password" class="form-control" formControlName="contrasena"
                         [ngClass]="{ 'is-invalid': submitted && f.password.errors }" id="password"
                         placeholder="Enter your password" required />
                       <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                        <div *ngIf="f.password.errors.required">Password is required</div>
+                        <div *ngIf="f.password.errors.required">La contraseña es requerida</div>
                       </div>
                     </div>
                   </div>
@@ -67,23 +66,23 @@
                   <div class="form-group mb-4">
                     <div class="custom-control custom-checkbox">
                       <input type="checkbox" class="custom-control-input" id="checkbox-signin" checked>
-                      <label class="custom-control-label" for="checkbox-signin">Remember
+                      <label class="custom-control-label" for="checkbox-signin">Recordar
                         me</label>
                     </div>
                   </div>
 
                   <div class="form-group mb-0 text-center">
-                    <button class="btn btn-primary btn-block" type="submit"> Log In
+                    <button class="btn btn-primary btn-block" type="submit"> Entrar
                     </button>
                   </div>
                 </form>
                 <div class="py-3 text-center"><span class="font-size-16 font-weight-bold">Datos de logueo: </span></div>
                 <div class="row">
                   <div class="col-12">
-                    <p class="pb-0"><strong>Username: </strong> 
+                    <p class="pb-0"><strong>Email: </strong> 
                     </p>
                     <p>admin@masterdental24.com</p>
-                    <p class="pb-0"> <strong>Password: </strong>
+                    <p class="pb-0"> <strong>Contraseña: </strong>
                     </p>
                     <p>masterdental24
                     </p>
