--- a/src/app/account/auth/login/login.component.html
+++ b/src/app/account/auth/login/login.component.html
@@ -54,7 +54,7 @@
                           <i data-feather="lock" class="icon-dual" appFeatherIcon></i>
                         </span>
                       </div>
-                      <input type="password" class="form-control" formControlName="contrasena"
+                      <input type="password" class="form-control" formControlName="password"
                         [ngClass]="{ 'is-invalid': submitted && f.password.errors }" id="password"
                         placeholder="Enter your password" required />
                       <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
