dentits and patients components

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row page-title align-items-center">
     <div class="col-sm-4 col-xl-12">
-      <h4 class="mb-1 mt-0">Dashboard</h4>
+      <h4 class="mb-1 mt-0">Actividad en MasterDent24</h4>
     </div>
     <!-- <div class="col-sm-8 col-xl-6">
       <form class="form-inline float-sm-right mt-3 mt-sm-0">
@@ -54,13 +54,13 @@
     <div class="col-xl-3">
       <div class="card">
         <div class="card-body p-0">
-          <h5 class="card-title header-title border-bottom p-3 mb-0">Overview</h5>
+          <h5 class="card-title header-title border-bottom p-3 mb-0">Resumen</h5>
           <!-- Overview data -->
-          <app-overview value='121,000' icon='users' title="Total Visitors" classNames="px-3 py-4">
+          <app-overview value='0' icon='users' title="Total de visitantes" classNames="px-3 py-4">
           </app-overview>
-          <app-overview value='21,000' icon='image' title="Our Projects" classNames="px-3 py-4">
+          <app-overview value='0' icon='image' title="Pasientes registrados" classNames="px-3 py-4">
           </app-overview>
-          <app-overview value='$21.5' icon='shopping-bag' title="Appointments" classNames="px-3 py-4"></app-overview>
+          <app-overview value='0' icon='shopping-bag' title="Solicitudes de cuenta" classNames="px-3 py-4"></app-overview>
         </div>
       </div>
     </div>
@@ -84,7 +84,7 @@
               <a class="nav-link text-muted" href="javascript: void(0);">1y</a>
             </li>
           </ul> -->
-          <h5 class="card-title header-title mb-0">Visits</h5>
+          <h5 class="card-title header-title mb-0">Visitas</h5>
 
           <div class="mt-3">
             <apx-chart [series]="revenueAreaChart.series" [chart]="revenueAreaChart.chart"
