--- a/src/app/account/auth/login/login.component.html
+++ b/src/app/account/auth/login/login.component.html
@@ -85,6 +85,7 @@
                     <p class="pb-0"> <strong>Contraseña: </strong>
                     </p>
                     <p>
+                      masterdental24
                     </p>
                   </div>
                 </div>
