new on filter users dentists and patients

--- a/src/app/pages/apps/patients/patients.component.html
+++ b/src/app/pages/apps/patients/patients.component.html
@@ -55,7 +55,7 @@
                   <th scope="col">Nombre</th>
                 <!--   <th scope="col">Customer</th>
                   <th scope="col">Price</th> -->
-                  <th scope="col">Birthday</th>
+                  <th scope="col">Estado de solicitud</th>
                 </tr>
               </thead>
               <tbody>
@@ -64,7 +64,7 @@
                   <td>{{ user.name }}{{user.surname}}</td>
                  <!--  <td>{{ table.name }}</td>
                   <td>{{ table.price }}</td> -->
-                  <td><span >{{user.birthday}}</span></td>
+                  <td><span >{{user.status}}</span></td>
                 </tr>
 
               </tbody>
