--- a/src/app/pages/apps/dentists/dentists.component.html
+++ b/src/app/pages/apps/dentists/dentists.component.html
@@ -56,6 +56,7 @@
                 <!--   <th scope="col">Customer</th>
                   <th scope="col">Price</th> -->
                   <th scope="col">Especialidad</th>
+                  <th scope="col">estado de solicitud</th>
                 </tr>
               </thead>
               <tbody>
@@ -65,6 +66,7 @@
                  <!--  <td>{{ table.name }}</td>
                   <td>{{ table.price }}</td> -->
                   <td><span >{{user.specialty}}</span></td>
+                  <td><span >{{user.status}}</span></td>
                 </tr>
 
               </tbody>
