new on filter users dentists and patients

--- a/src/app/pages/apps/patients/patients.component.html
+++ b/src/app/pages/apps/patients/patients.component.html
@@ -53,6 +53,7 @@
                 <tr>
             <!--       <th scope="col">#</th> -->
                   <th scope="col">Nombre</th>
+                  <th scope="col">Nombre de usuario</th>
                 <!--   <th scope="col">Customer</th>
                   <th scope="col">Price</th> -->
                   <th scope="col">Estado de solicitud</th>
@@ -61,7 +62,8 @@
               <tbody>
                 <tr *ngFor="let user of users" >
                   <!-- <td>{{ table.id }}</td> -->
-                  <td>{{ user.name }}{{user.surname}}</td>
+                  <td>{{ user.name }}</td>
+                  <td>{{ user.username }}</td>
                  <!--  <td>{{ table.name }}</td>
                   <td>{{ table.price }}</td> -->
                   <td><span >{{user.status}}</span></td>
