--- a/src/app/pages/apps/dentists/dentists.component.html
+++ b/src/app/pages/apps/dentists/dentists.component.html
@@ -46,7 +46,7 @@
       <!--     <a routerLink="../newproject" class="btn btn-primary btn-sm float-right">
             <i class="uil uil-export ml-1"></i> New project
           </a> -->
-          <h5 class="card-title header-title mt-0 mb-0">Dentistas registrados</h5>
+          <h5 class="card-title header-title mt-0 mb-0">Solicitudes de registro</h5>
           <div class="table-responsive mt-4">
             <table class="table table-hover table-nowrap mb-0">
               <thead>
