--- a/src/app/pages/apps/dentists/dentists.component.html
+++ b/src/app/pages/apps/dentists/dentists.component.html
@@ -46,29 +46,83 @@
       <!--     <a routerLink="../newproject" class="btn btn-primary btn-sm float-right">
             <i class="uil uil-export ml-1"></i> New project
           </a> -->
-          <h5 class="card-title header-title mt-0 mb-0">Solicitudes de registro</h5>
-          <div class="table-responsive mt-4">
+          <h5 class="card-title header-title mt-0 mb-0" style="color:#41bc3f;" [hidden]="newusers<1">Solicitudes de registro ({{newusers}})</h5>
+          <h5 class="card-title header-title mt-0 mb-0" [hidden]="newusers>0">Solicitudes de registro ({{newusers}})</h5>
+          <div class="table-responsive mt-4" [hidden]="newusers==0">
             <table class="table table-hover table-nowrap mb-0">
               <thead>
                 <tr>
             <!--       <th scope="col">#</th> -->
-                  <th scope="col">Nombre de usuario</th>
                   <th scope="col">Nombre</th>
+                  <th scope="col">Nombre de usuario</th>
                 <!--   <th scope="col">Customer</th>
                   <th scope="col">Price</th> -->
-                  <th scope="col">Especialidad</th>
-                  <th scope="col">estado de solicitud</th>
+          
+                  <!-- <th scope="col">estado de solicitud</th> -->
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor="let user of users" >
+                <tr *ngFor="let user of users"  [hidden]="user.status!='new'"  routerLink="/dentistview/{{user.id}}" style="cursor: pointer;">
                   <!-- <td>{{ table.id }}</td> -->
-                  <td>{{ user.username }}</td>
                   <td>{{ user.name }} {{user.surname}}</td>
+                  <td>{{ user.username }}</td>
                  <!--  <td>{{ table.name }}</td>
                   <td>{{ table.price }}</td> -->
-                  <td><span >{{user.specialty}}</span></td>
-                  <td><span >{{user.status}}</span></td>
+            
+                  <!-- <td><span >{{user.status}}</span></td> -->
+                </tr>
+
+              </tbody>
+            </table>
+          </div><!-- end table -->
+        </div><!-- end card-body -->
+      </div><!-- end card -->
+    </div>
+
+    <div class="col-xl-12">
+      <div class="card">
+        <div class="card-body">
+      <!--     <a routerLink="../newproject" class="btn btn-primary btn-sm float-right">
+            <i class="uil uil-export ml-1"></i> New project
+          </a> -->
+          <h5 class="card-title header-title mt-0 mb-0">Dentistas registrados ({{registeredusers}})</h5>
+          <div class="table-responsive mt-4" >
+            <table class="table table-hover table-nowrap mb-0">
+              <thead>
+                <tr>
+            <!--       <th scope="col">#</th> -->
+                  <th scope="col">Nombre</th>
+                  <th scope="col">Nombre de usuario</th>
+                <!--   <th scope="col">Customer</th>
+                  <th scope="col">Price</th> -->
+                  <th scope="col">Especialidad</th>
+                  <!-- <th scope="col">estado de solicitud</th> -->
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let user of users" [hidden]="user.status=='new'" routerLink="/dentistview/{{user.id}}" style="cursor: pointer;">
+                  <!-- <td>{{ table.id }}</td> -->
+                  <td>
+                    <div class="chat-avatar" *ngIf="user.images[0]!=undefined ">
+                     <img src="{{user.images[0]}}" style="width:32px;"> 
+                    {{ user.name }} {{user.surname}}
+                    </div> 
+                  </td>
+                  <td>
+                    {{ user.username }}
+                  </td>
+                 <!--  <td>{{ table.name }}</td>
+                  <td>{{ table.price }}</td> -->
+                  <td >
+                    <span *ngFor="let spec of user.specs">
+                      <div  *ngFor="let sp of specs">
+                        <div [hidden]="sp.idspec!=spec">  
+                        {{sp.name}},   
+                        </div>  
+                      </div> 
+                    </span>
+                  </td>
+                  <!-- <td><span >{{user.status}}</span></td> -->
                 </tr>
 
               </tbody>
