--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -58,7 +58,7 @@
           <!-- Overview data -->
           <app-overview value='0' icon='users' title="Total de visitantes" classNames="px-3 py-4">
           </app-overview>
-          <app-overview value='{{_uw.totalPatients}}' icon='image' title="Pasientes registrados" classNames="px-3 py-4">
+          <app-overview value='{{_uw.totalPatients}}' icon='image' title="Pacientes registrados" classNames="px-3 py-4">
           </app-overview>
           <app-overview value='{{_uw.totalDentists}}' icon='shopping-bag' title="Solicitudes de cuenta" classNames="px-3 py-4"></app-overview>
         </div>
