--- a/src/app/pages/apps/patients/patients.component.html
+++ b/src/app/pages/apps/patients/patients.component.html
@@ -1,39 +1,5 @@
 <div class="container-fluid">
-<!--   <div class="row page-title align-items-center">
-    <div class="col-sm-4 col-xl-6">
-      <h4 class="mb-1 mt-0">Dashboard</h4>
-    </div>
-    <div class="col-sm-8 col-xl-6">
-      <form class="form-inline float-sm-right mt-3 mt-sm-0">
-        <div class="form-group mb-sm-0 mr-2">
-          <input type="text" class="form-control" id="dashdaterange" style="min-width: 208px;"
-            placeholder="2018-10-03 to 2018-10-10" mwlFlatpickr [convertModelValue]="true" mode="range" />
-        </div>
-        <div class="btn-group" ngbDropdown>
-          <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" ngbDropdownToggle>
-            <i class='uil uil-file-alt mr-1'></i>Download
-            <i class="icon"><span>
-                <i data-feather="chevron-down"></i>
-              </span></i></button>
-          <div class="dropdown-menu dropdown-menu-right" ngbDropdownMenu>
-            <a href="javascript: void(0);" class="dropdown-item notify-item">
-              <i data-feather="mail" class="icon-dual icon-xs mr-2"></i>
-              <span> Email</span>
-            </a>
-            <a href="javascript: void(0);" class="dropdown-item notify-item">
-              <i data-feather="printer" class="icon-dual icon-xs mr-2"></i>
-              <span> Print</span>
-            </a>
-            <div class="dropdown-divider"></div>
-            <a href="javascript: void(0);" class="dropdown-item notify-item">
-              <i data-feather="file" class="icon-dual icon-xs mr-2"></i>
-              <span> Re-Generate</span>
-            </a>
-          </div>
-        </div>
-      </form>
-    </div>
-  </div> -->
+
   <app-page-title title="" [breadcrumbItems]="breadCrumbItems"></app-page-title>
 
 
@@ -56,7 +22,7 @@
                   <th scope="col">Nombre</th>
                 <!--   <th scope="col">Customer</th>
                   <th scope="col">Price</th> -->
-                  <th scope="col">Estado de solicitud</th>
+                  <!-- <th scope="col">Estado de solicitud</th> -->
                 </tr>
               </thead>
               <tbody>
@@ -65,13 +31,15 @@
                  <td>
                     <div class="chat-avatar" >
                      <img src="{{user.images[0]}}" style="width:32px;"> 
-                    {{ user.username }}
+                  {{ user.name }}
                     </div> 
                   </td>
-                  <td>{{ user.name }}</td>
+                  <td>
+                    {{ user.username }}
+                </td>
                  <!--  <td>{{ table.name }}</td>
                   <td>{{ table.price }}</td> -->
-                  <td><span >{{user.status}}</span></td>
+                 <!--  <td><span >{{user.status}}</span></td> -->
                 </tr>
 
               </tbody>
