--- a/src/app/pages/apps/dentistview/dentistview.component.html
+++ b/src/app/pages/apps/dentistview/dentistview.component.html
@@ -49,7 +49,7 @@
           </table>
         </div>
       </div>
-      <div class="mt-3 pt-2 border-top">
+      <div class="mt-3 pt-2 border-top" *ngIf="dentist.specs[0]!=undefined">
         <h4 class="mb-3 font-size-15">Especialidades</h4>
         <span *ngFor="let spec of dentist.specs">
                       <div  *ngFor="let sp of _uw.specs">
@@ -58,7 +58,7 @@
                         </div>  
                       </div> 
                     </span>
-        <label class="badge badge-soft-primary mr-1" *ngFor="let spec of dentist.spec">UI 
+        <label class="badge badge-soft-primary mr-1" *ngFor="let spec of dentist.specs">UI 
           <div  *ngFor="let sp of _uw.specs">
             <div [hidden]="sp.idspec!=spec">  
             {{sp.name}},   
