--- a/src/app/pages/apps/dentistview/dentistview.component.html
+++ b/src/app/pages/apps/dentistview/dentistview.component.html
@@ -1,88 +1,194 @@
 <div class="container-fluid">
   <app-page-title title="Profile" [breadcrumbItems]="breadCrumbItems"></app-page-title>
   <div class="row">
-    <div class="col-lg-6">
-       <div class="card">
-    <div class="card-body">
-      <div class="text-center mt-3">
-        <img src="{{dentist.images[0]}}" alt="" class="avatar-lg rounded-circle" />
-        <h5 class="mt-2 mb-0">{{dentist.username}}</h5>
-        <h6 class="text-muted font-weight-normal mt-2 mb-0">{{dentist.name}}
-        </h6>
-        <h6 class="text-muted font-weight-normal mt-1 mb-4">Nro.colegiado: {{dentist.collegeN}}</h6>
+    <div class="col-lg-3">
+      <ng-template [ngTemplateOutlet]="ProfileData"></ng-template>
 
-        <div class="progress mb-4" style="height: 14px;">
-          <div class="progress-bar bg-success" role="progressbar" style="width: 60%;" aria-valuenow="60"
-            aria-valuemin="0" aria-valuemax="100">
-            <span class="font-size-12 font-weight-bold">Perfil completado <span class="font-size-11">60%</span>
-              </span>
-          </div>
-        </div>
-
-        <button type="button" class="btn btn-white btn-sm">Denegar</button>
-        <button type="button" class="btn btn-primary btn-sm mr-1">Aceptar solicitud</button>
-      </div>
-
-      <!-- profile  -->
-      <div class="mt-5 pt-2 border-top">
-        <h4 class="mb-3 font-size-15">Breve descripción</h4>
-        <p class="text-muted mb-4">{{dentist.about}}</p>
-      </div>
-      <div class="mt-3 pt-2 border-top">
-        <h4 class="mb-3 font-size-15">Información de contacto</h4>
-        <div class="table-responsive">
-          <table class="table table-borderless mb-0 text-muted">
-            <tbody>
-              <tr>
-                <th scope="row">Email</th>
-                <td>{{dentist.username}}</td>
-              </tr>
-              <tr>
-                <th scope="row">Telefono</th>
-                <td>{{dentist.phone}}</td>
-              </tr>
-              <tr>
-                <th scope="row">Dirección</th>
-                <td>{{dentist.address}}</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-      <div class="mt-3 pt-2 border-top" *ngIf="dentist.specs[0]!=undefined">
-        <h4 class="mb-3 font-size-15">Especialidades</h4>
-        <span *ngFor="let spec of dentist.specs">
-                      <div  *ngFor="let sp of _uw.specs">
-                        <div [hidden]="sp.idspec!=spec">  
-                        {{sp.name}},   
-                        </div>  
-                      </div> 
-                    </span>
-        <label class="badge badge-soft-primary mr-1" *ngFor="let spec of dentist.specs">UI 
-          <div  *ngFor="let sp of _uw.specs">
-            <div [hidden]="sp.idspec!=spec">  
-            {{sp.name}},   
-            </div>  
-          </div> 
-        </label>
-  
-      </div>
-    </div>
-  </div>
       <!-- end card -->
 
     </div>
-    
+    <div class="col-lg-9">
+      <div class="card">
+        <div class="card-body">
+          <ngb-tabset type="pills" justify="justified" class="navtab-bg nav-justified">
+            <ngb-tab title="Activity">
+              <ng-template ngbTabContent class="nav-item">
+                <h5 class="mt-3">This Week</h5>
+                <div class="left-timeline mt-3 mb-3 pl-4">
+                  <ul class="list-unstyled events mb-0">
+                    <li class="event-list" *ngFor="let activity of activities">
+                      <div class="pb-4">
+                        <div class="media">
+                          <div class="event-date text-center mr-4">
+                            <div class="bg-soft-primary p-1 rounded text-primary font-size-14">
+                              {{ activity.time }}</div>
+                          </div>
+                          <div class="media-body">
+                            <h6 class="font-size-15 mt-0 mb-1">{{ activity.title }}</h6>
+                            <p class="text-muted font-size-14">{{ activity.text }}</p>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+                <h5 class="mt-3">Last Week</h5>
+                <div class="left-timeline mt-3 mb-3 pl-4">
+                  <ul class="list-unstyled events mb-0">
+                    <li class="event-list" *ngFor="let activity of activities">
+                      <div class="pb-4">
+                        <div class="media">
+                          <div class="event-date text-center mr-4">
+                            <div class="bg-soft-primary p-1 rounded text-primary font-size-14">
+                              {{ activity.time }}</div>
+                          </div>
+                          <div class="media-body">
+                            <h6 class="font-size-15 mt-0 mb-1">{{ activity.title }}</h6>
+                            <p class="text-muted font-size-14">{{ activity.text }}</p>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+                <h5 class="mt-3">Last Month</h5>
+                <div class="left-timeline mt-3 mb-3 pl-4">
+                  <ul class="list-unstyled events mb-0">
+                    <li class="event-list" *ngFor="let activity of activities">
+                      <div class="pb-4">
+                        <div class="media">
+                          <div class="event-date text-center mr-4">
+                            <div class="bg-soft-primary p-1 rounded text-primary font-size-14">
+                              {{ activity.time }}</div>
+                          </div>
+                          <div class="media-body">
+                            <h6 class="font-size-15 mt-0 mb-1">{{ activity.title }}</h6>
+                            <p class="text-muted font-size-14">{{ activity.text }}</p>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </ng-template>
+            </ngb-tab>
+            <ngb-tab title="Messages" class="nav nav-pills navtab-bg">
+              <ng-template ngbTabContent class="nav-item">
+                <h5 class="mt-3">Messages</h5>
+                <ul class="list-unstyled">
+                  <li class="py-3 border-bottom" *ngFor="let media of messageData">
+                    <div class="media">
+                      <div class="mr-3" *ngIf="media.image">
+                        <img src="{{ media.image }}" alt="" class="avatar-md rounded-circle">
+                      </div>
+                      <div class="avatar-md rounded-circle bg-soft-primary mr-3" *ngIf="media.font">
+                        <span class="font-size-18 avatar-title text-primary font-weight-semibold">
+                          {{ media.font }}
+                        </span>
+                      </div>
+                      <div class="media-body overflow-hidden">
+                        <h5 class="font-size-15 mt-2 mb-1"><a href="#" class="text-dark">{{ media.name }}</a></h5>
+                        <p class="text-muted font-size-13 text-truncate mb-0">
+                          {{ media.text }}</p>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+                <div class="text-center">
+                  <a href="javascript: void(0);" class="btn btn-primary btn-sm">Load more</a>
+                </div>
+              </ng-template>
+            </ngb-tab>
+            <ngb-tab title="Projects" class="nav nav-pills navtab-bg">
+              <ng-template ngbTabContent class="nav-item">
+                <h5 class="mt-3">Projects</h5>
+                <div class="row mt-3">
+                  <ng-template [ngTemplateOutlet]="ProjectsData" [ngTemplateOutletContext]="{project:project}"
+                    *ngFor="let project of projectData"></ng-template>
+                </div>
+              </ng-template>
+            </ngb-tab>
+            <ngb-tab title="Tasks" class="nav nav-pills navtab-bg">
+              <ng-template ngbTabContent class="nav-item">
+                <h5 class="mt-3">Tasks</h5>
+                <div class="card mb-0 shadow-none">
+                  <div class="card-body">
+                    <!-- task -->
+                    <ng-template [ngTemplateOutlet]="tasksData" [ngTemplateOutletContext]="{task: task, i: i}"
+                      *ngFor="let task of tasks; let i = index;"></ng-template>
+                    <!-- end task -->
+                  </div>
+                </div>
+              </ng-template>
+            </ngb-tab>
+            <ngb-tab title="Files" class="nav nav-pills navtab-bg">
+              <ng-template ngbTabContent class="nav-item">
+                <h5 class="mt-3">Files</h5>
+                <div class="card mb-2 shadow-none border">
+                  <div class="p-1 px-2">
+                    <div class="row align-items-center">
+                      <div class="col-auto">
+                        <img src="assets/images/projects/project-1.jpg" class="avatar-sm rounded" alt="file-image">
+                      </div>
+                      <div class="col pl-0">
+                        <a href="javascript:void(0);" class="text-muted font-weight-bold">sales-assets.zip</a>
+                        <p class="mb-0">2.3 MB</p>
+                      </div>
+                      <div class="col-auto">
+                        <!-- Button -->
+                        <a href="javascript:void(0);" placement="bottom" ngbTooltip="Download"
+                          class="btn btn-link text-muted btn-lg p-0">
+                          <i class='uil uil-cloud-download font-size-14'></i>
+                        </a>
+                        <a href="javascript:void(0);" placement="bottom" ngbTooltip="Delete"
+                          class="btn btn-link text-danger btn-lg p-0">
+                          <i class='uil uil-multiply font-size-14'></i>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="card mb-2 shadow-none border">
+                  <div class="p-1 px-2">
+                    <div class="row align-items-center">
+                      <div class="col-auto">
+                        <img src="assets/images/projects/project-2.jpg" class="avatar-sm rounded" alt="file-image">
+                      </div>
+                      <div class="col pl-0">
+                        <a href="javascript:void(0);" class="text-muted font-weight-bold">new-contarcts.docx</a>
+                        <p class="mb-0">1.25 MB</p>
+                      </div>
+                      <div class="col-auto">
+                        <!-- Button -->
+                        <a href="javascript:void(0);" placement="bottom" ngbTooltip="Download"
+                          class="btn btn-link text-muted btn-lg p-0">
+                          <i class='uil uil-cloud-download font-size-14'></i>
+                        </a>
+                        <a href="javascript:void(0);" placement="bottom" ngbTooltip="Delete"
+                          class="btn btn-link text-danger btn-lg p-0">
+                          <i class='uil uil-multiply font-size-14'></i>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- end attachments -->
+              </ng-template>
+            </ngb-tab>
+          </ngb-tabset>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
 <!-- Profile data -->
-<!-- <ng-template #ProfileData >
+<ng-template #ProfileData>
   <div class="card">
     <div class="card-body">
-      <div class="text-center mt-3"  *ngIf="dentist.images[0]!=undefined">
-        <img src="{{dentist.images[0]}}" alt="" class="avatar-lg rounded-circle" />
-        <h5 class="mt-2 mb-0">{{dentist.username}}</h5>
+      <div class="text-center mt-3">
+        <img src="assets/images/users/avatar-7.jpg" alt="" class="avatar-lg rounded-circle" />
+        <h5 class="mt-2 mb-0">Shreyu N</h5>
         <h6 class="text-muted font-weight-normal mt-2 mb-0">User Experience Specialist
         </h6>
         <h6 class="text-muted font-weight-normal mt-1 mb-4">San Francisco, CA</h6>
@@ -90,62 +196,55 @@
         <div class="progress mb-4" style="height: 14px;">
           <div class="progress-bar bg-success" role="progressbar" style="width: 60%;" aria-valuenow="60"
             aria-valuemin="0" aria-valuemax="100">
-            <span class="font-size-12 font-weight-bold">Perfil completado <span class="font-size-11">60%</span>
-              </span>
+            <span class="font-size-12 font-weight-bold">Your Profile is <span class="font-size-11">60%</span>
+              completed</span>
           </div>
         </div>
 
-        <button type="button" class="btn btn-white btn-sm">Denegar</button>
-        <button type="button" class="btn btn-primary btn-sm mr-1">Aceptar solicitud</button>
+        <button type="button" class="btn btn-primary btn-sm mr-1">Follow</button>
+        <button type="button" class="btn btn-white btn-sm">Message</button>
       </div>
 
-
+      <!-- profile  -->
       <div class="mt-5 pt-2 border-top">
-        <h4 class="mb-3 font-size-15">Breve descripción</h4>
-        <p class="text-muted mb-4">{{dentist.about}}</p>
+        <h4 class="mb-3 font-size-15">About</h4>
+        <p class="text-muted mb-4">Hi I'm Shreyu. I am user experience and user
+          interface designer.
+          I have been working on UI & UX since last 10 years.</p>
       </div>
       <div class="mt-3 pt-2 border-top">
-        <h4 class="mb-3 font-size-15">Información de contacto</h4>
+        <h4 class="mb-3 font-size-15">Contact Information</h4>
         <div class="table-responsive">
           <table class="table table-borderless mb-0 text-muted">
             <tbody>
               <tr>
                 <th scope="row">Email</th>
-                <td>{{dentist.username}}</td>
+                <td>xyz123@gmail.com</td>
               </tr>
               <tr>
-                <th scope="row">Telefono</th>
-                <td>{{dentist.phone}}</td>
+                <th scope="row">Phone</th>
+                <td>(123) 123 1234</td>
               </tr>
               <tr>
-                <th scope="row">Dirección</th>
-                <td>{{dentist.address}}</td>
+                <th scope="row">Address</th>
+                <td>1975 Boring Lane, San Francisco, California, United States -
+                  94108</td>
               </tr>
             </tbody>
           </table>
         </div>
       </div>
-      <div class="mt-3 pt-2 border-top" *ngIf="_uw.specs[0]!=undefined">
-        <h4 class="mb-3 font-size-15">Especialidades</h4>
-        <span *ngFor="let spec of dentist.specs">
-                      <div  *ngFor="let sp of _uw.specs">
-                        <div [hidden]="sp.idspec!=spec">  
-                        {{sp.name}},   
-                        </div>  
-                      </div> 
-                    </span>
-        <label class="badge badge-soft-primary mr-1" *ngFor="let spec of dentist.spec">UI 
-          <div  *ngFor="let sp of _uw.specs">
-            <div [hidden]="sp.idspec!=spec">  
-            {{sp.name}},   
-            </div>  
-          </div> 
-        </label>
-  
+      <div class="mt-3 pt-2 border-top">
+        <h4 class="mb-3 font-size-15">Skills</h4>
+        <label class="badge badge-soft-primary mr-1">UI design</label>
+        <label class="badge badge-soft-primary mr-1">UX</label>
+        <label class="badge badge-soft-primary mr-1">Sketch</label>
+        <label class="badge badge-soft-primary mr-1">Photoshop</label>
+        <label class="badge badge-soft-primary mr-1">Frontend</label>
       </div>
     </div>
   </div>
-</ng-template> -->
+</ng-template>
 
 
 <!-- tasks tab content -->
