--- a/src/app/pages/apps/settingsapp/settingsapp.component.html
+++ b/src/app/pages/apps/settingsapp/settingsapp.component.html
@@ -9,8 +9,8 @@
     <div class="col-xl-12 col-md-12 col-sm-12">
       <div class="card">
         <div class="card-body">
-          <a  class="btn btn-primary btn-sm float-right">
-            <i class="uil uil-export ml-1"></i>Agregar Especialiadad
+          <a  class="btn btn-primary btn-sm float-right" routerLink="../newspecialty" style="color:white;">
+            <i class="uil uil-plus ml-1"></i>Agregar Especialiadad
           </a>
       <!--     <a routerLink="../newproject" class="btn btn-primary btn-sm float-right">
             <i class="uil uil-export ml-1"></i> New project
