--- a/src/app/pages/apps/newspecialty/newspecialty.component.html
+++ b/src/app/pages/apps/newspecialty/newspecialty.component.html
@@ -29,7 +29,7 @@
                 <button type="submit" class="btn btn-primary waves-effect waves-light mr-1">
                   Aceptar
                 </button>
-                <button type="reset" class="btn btn-secondary waves-effect">
+                <button type="reset" class="btn btn-secondary waves-effect" routerLink="../settingsapp">
                   Cancelar
                 </button>
               </div>
