--- a/src/app/pages/apps/dentistview/dentistview.component.html
+++ b/src/app/pages/apps/dentistview/dentistview.component.html
@@ -1,13 +1,13 @@
 <div class="container-fluid">
   <app-page-title title="Profile" [breadcrumbItems]="breadCrumbItems"></app-page-title>
   <div class="row">
-    <div class="col-lg-3">
+    <div class="col-lg-4">
       <ng-template [ngTemplateOutlet]="ProfileData"></ng-template>
 
       <!-- end card -->
 
     </div>
-    <div class="col-lg-9">
+    <div class="col-lg-8">
       <div class="card">
         <div class="card-body">
           <ngb-tabset type="pills" justify="justified" class="navtab-bg nav-justified">
@@ -186,61 +186,60 @@
 <ng-template #ProfileData>
   <div class="card">
     <div class="card-body">
-      <div class="text-center mt-3">
-        <img src="assets/images/users/avatar-7.jpg" alt="" class="avatar-lg rounded-circle" />
-        <h5 class="mt-2 mb-0">Shreyu N</h5>
-        <h6 class="text-muted font-weight-normal mt-2 mb-0">User Experience Specialist
+      <div class="text-center mt-3" *ngIf="dentist.images[0]!=undefined">
+        <img src="{{dentist.images[0]}}" alt="" class="avatar-lg rounded-circle" />
+        <h5 class="mt-2 mb-0">{{dentist.username}}</h5>
+        <h6 class="text-muted font-weight-normal mt-2 mb-0">Nro Colegiado: {{dentist.collegeN}}
         </h6>
-        <h6 class="text-muted font-weight-normal mt-1 mb-4">San Francisco, CA</h6>
+        <h6 class="text-muted font-weight-normal mt-1 mb-4">{{dentist.clinicName}}</h6>
 
         <div class="progress mb-4" style="height: 14px;">
           <div class="progress-bar bg-success" role="progressbar" style="width: 60%;" aria-valuenow="60"
             aria-valuemin="0" aria-valuemax="100">
-            <span class="font-size-12 font-weight-bold">Your Profile is <span class="font-size-11">60%</span>
-              completed</span>
+            <span class="font-size-12 font-weight-bold">Perfil completado al <span class="font-size-11">60%</span>
+              </span>
           </div>
         </div>
 
-        <button type="button" class="btn btn-primary btn-sm mr-1">Follow</button>
-        <button type="button" class="btn btn-white btn-sm">Message</button>
+        <button type="button" class="btn btn-primary btn-sm mr-1">Denegar</button>
+        <button type="button" class="btn btn-white btn-sm">Aceptar</button>
       </div>
 
       <!-- profile  -->
       <div class="mt-5 pt-2 border-top">
-        <h4 class="mb-3 font-size-15">About</h4>
-        <p class="text-muted mb-4">Hi I'm Shreyu. I am user experience and user
-          interface designer.
-          I have been working on UI & UX since last 10 years.</p>
+        <h4 class="mb-3 font-size-15">Breve descripcion</h4>
+        <p class="text-muted mb-4">{{dentist.about}}.</p>
       </div>
       <div class="mt-3 pt-2 border-top">
-        <h4 class="mb-3 font-size-15">Contact Information</h4>
+        <h4 class="mb-3 font-size-15">Informacion de contacto</h4>
         <div class="table-responsive">
           <table class="table table-borderless mb-0 text-muted">
             <tbody>
-              <tr>
                 <th scope="row">Email</th>
-                <td>xyz123@gmail.com</td>
-              </tr>
               <tr>
-                <th scope="row">Phone</th>
-                <td>(123) 123 1234</td>
+                <td>{{dentist.username}}</td>
               </tr>
+                <th scope="row">Telefono</th>
               <tr>
+                <td>{{dentist.phone}}</td>
+              </tr>
                 <th scope="row">Address</th>
-                <td>1975 Boring Lane, San Francisco, California, United States -
-                  94108</td>
+              <tr>
+                <td>{{dentist.address}}</td>
               </tr>
             </tbody>
           </table>
         </div>
       </div>
       <div class="mt-3 pt-2 border-top">
-        <h4 class="mb-3 font-size-15">Skills</h4>
-        <label class="badge badge-soft-primary mr-1">UI design</label>
-        <label class="badge badge-soft-primary mr-1">UX</label>
-        <label class="badge badge-soft-primary mr-1">Sketch</label>
-        <label class="badge badge-soft-primary mr-1">Photoshop</label>
-        <label class="badge badge-soft-primary mr-1">Frontend</label>
+        <h4 class="mb-3 font-size-15">Especialidades</h4>
+        <span  *ngFor="let spec of dentist.specs">
+            <div  *ngFor="let sp of _uw.specs">
+              <label class="badge badge-soft-primary mr-1"  [hidden]="sp.idspec!=spec">{{sp.name}}
+              </label>
+            </div>  
+        </span>
+  
       </div>
     </div>
   </div>
